# picsort

./: .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: python.yaml
picsort/: __main__.py  picsort.py
tests/: test_basic.py  test_reader.py  test_sorter.py
